--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,7 +36,7 @@ jobs:
         continue-on-error: true
 
       - name: Update pull request
-      - uses: actions/github-script@0.9.0
+        uses: actions/github-script@0.9.0
         if: github.event_name == 'pull_request'
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
